borsh/tests/roundtrip/snapshots/tests__roundtrip__test_vecs__vec_f32-3.snap
---
source: borsh/tests/roundtrip/test_vecs.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
]
