borsh/tests/roundtrip/snapshots/tests__roundtrip__test_vecs__vec_f32-4.snap
---
source: borsh/tests/roundtrip/test_vecs.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
]
