borsh/tests/roundtrip/snapshots/tests__roundtrip__test_vecs__vec_string-4.snap
---
source: borsh/tests/roundtrip/test_vecs.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
]
