borsh/tests/roundtrip/snapshots/tests__roundtrip__test_vecs__vec_u32-3.snap
---
source: borsh/tests/roundtrip/test_vecs.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
]
