borsh/tests/roundtrip/snapshots/tests__roundtrip__test_vecs__vec_u8-3.snap
---
source: borsh/tests/roundtrip/test_vecs.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
]
